--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -27,6 +27,9 @@ Sound Drivers cannot be empty.=Sound Drivers can not be empty.
 [ArchHooks_Unix]
 Couldn't find 'Songs'=Couldn't find 'Songs'
 
+[ArchHooks_Android]
+Couldn't find 'Songs'=Couldn't find 'Songs'
+
 [CSMPackageInstallDlg]
 Could not open file '%s'.=Could not open file '%s'.
 Installing.  Please wait...=Installing.  Please wait...
